{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 16,
  "lineage": "96ba64e0-0e66-63a9-d57b-051ce0e224bb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff91eb5c6fe7cc86",
            "arn": "arn:aws:ec2:ap-south-1:539247467606:instance/i-0bb1bdc0beb29017a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb1bdc0beb29017a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e968d565d56fb67f",
            "private_dns": "ip-10-0-1-34.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.34",
            "public_ip": "13.232.191.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e00c24101ef40ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035a1aac09b72cf1f",
            "tags": {
              "Name": "Containerize-application-using-Docker-ec2"
            },
            "tags_all": {
              "Name": "Containerize-application-using-Docker-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eec90858e6ab980e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.devops_sg",
            "aws_subnet.devops_subnet",
            "aws_vpc.devops_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539247467606:internet-gateway/igw-021a4e75010da9c01",
            "id": "igw-021a4e75010da9c01",
            "owner_id": "539247467606",
            "tags": {
              "Name": "devops-igw"
            },
            "tags_all": {
              "Name": "devops-igw"
            },
            "vpc_id": "vpc-023ee1afe3f30e6ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539247467606:route-table/rtb-0c51f8c2836dcb925",
            "id": "rtb-0c51f8c2836dcb925",
            "owner_id": "539247467606",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021a4e75010da9c01",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-rt"
            },
            "tags_all": {
              "Name": "devops-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-023ee1afe3f30e6ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0184a9d2e6b0b9e4f",
            "route_table_id": "rtb-0c51f8c2836dcb925",
            "subnet_id": "subnet-035a1aac09b72cf1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_route_table.devops_rt",
            "aws_subnet.devops_subnet",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539247467606:security-group/sg-0eec90858e6ab980e",
            "description": "Allow SSH, HTTP, HTTPS, Django, React",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eec90858e6ab980e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Django Backend",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "React Frontend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops-sg-20260126033114272300000001",
            "name_prefix": "devops-sg-",
            "owner_id": "539247467606",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-sg"
            },
            "tags_all": {
              "Name": "devops-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-023ee1afe3f30e6ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devops_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539247467606:subnet/subnet-035a1aac09b72cf1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035a1aac09b72cf1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539247467606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-subnet"
            },
            "tags_all": {
              "Name": "devops-subnet"
            },
            "vpc_id": "vpc-023ee1afe3f30e6ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539247467606:vpc/vpc-023ee1afe3f30e6ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed22e1035211f5be",
            "default_route_table_id": "rtb-033d83f00c4fa0482",
            "default_security_group_id": "sg-0bbdb127bd5416460",
            "dhcp_options_id": "dopt-0fc542b47802cd117",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023ee1afe3f30e6ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-033d83f00c4fa0482",
            "owner_id": "539247467606",
            "tags": {
              "Name": "devops-vpc"
            },
            "tags_all": {
              "Name": "devops-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}